# main.go
@@ -2,13 +2,15 @@ package main
 
 import (
 	"net/http"
-
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
-
-	"github.com/gin-gonic/gin"
+	"time"
 
 	docs "uacademy/article/docs" // docs is generated by Swag CLI, you have to import it.
+	"uacademy/article/handlers"
+	"uacademy/article/models"
+
+	"github.com/gin-gonic/gin"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 // @contact.name  API Article
@@ -22,9 +24,19 @@ func main() {
 	docs.SwaggerInfo.Description = "This is a sample server Petstore server."
 	docs.SwaggerInfo.Version = "2.0"
 
-	InMemoryArticleData = append(InMemoryArticleData, Article{
-		ID: "1",
+	handlers.InMemoryArticleData = append(handlers.InMemoryArticleData, models.Article{
+		ID: "b6c46a35-d78b-4f1d-80fe-8d617f83ec6c",
+		Content: models.Content{
+			Title: "Lorem",
+			Body:  "Impsume smth smth smthsmth",
+		},
+		Author: models.Person{
+			Firstname: "John",
+			Lastname:  "Doe",
+		},
+		CreatedAt: time.Now(),
 	})
+
 	r := gin.Default()
 
 	r.GET("/ping", func(c *gin.Context) {
@@ -35,11 +47,11 @@ func main() {
 
 	v1 := r.Group("/v2")
 	{
-		v1.POST("/article", CreateArticle)
-		v1.GET("/article/:id", GetArticleByID)
-		v1.GET("/article", GetArticleList)
-		v1.PUT("/article", UpdateArticle)
-		v1.DELETE("/article/:id", DeleteArticle)
+		v1.POST("/article", handlers.CreateArticle)
+		v1.GET("/article/:id", handlers.GetArticleByID)
+		v1.GET("/article", handlers.GetArticleList)
+		v1.PUT("/article", handlers.UpdateArticle)
+		v1.DELETE("/article/:id", handlers.DeleteArticle)
 	}
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
